@@ -1,4 +1,5 @@
 HEAD
+	+ Rotate duplicity-debug.log log if exists
 	+ Bug fix: Port selected during installation is correctly saved
 	+ Zentyal web UI is restarted if their dependencies are upgraded
 	+ Bug fix: Logs don't include unrelated information now
